objects/copado__Release__c.object
<CustomObject>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>